--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>wheel-ui 官网</title>
-  <script src="//at.alicdn.com/t/font_2423623_grre0bh0kyw.js"></script>
+  <script></script>
 </head>
 <body>
   <div id="app"></div>
