--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" href="/favicon.ico" />
+  <link rel ="shortcut icon" type="image/x-icon" href="./src/assets/023-snowing.svg">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>wheel-ui 官网</title>
   <script></script>
